<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2012 Amlogic, Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name" translatable="false">NativeImagePlayer</string>
    <string name="action_settings">Settings</string>
    <string name="no_such_item">No such Item</string>
    <string name="menu_title">Menu</string>
    <string name="left_rotation">Left Rotation</string>
    <string name="right_rotation">Right Rotation</string>
    <string name="not_display">"The picture cannot display"</string>
    <string name="usb_eject">"Usb media eject, quit"</string>
    <string name="scale_up">"Scale up"</string>
    <string name="scale_down">"Scale down"</string>
    <string name="timer_set">"Timer set"</string>
    <string name="manual_skip">"manual"</string>
    <string name="scale_to_maximized">"Has been maximized"</string>
    <string name="scale_to_minimized">"Has been minimized"</string>
    <string name="scale_model_notice">"Scale Model\npress the exit key to exit"</string>
    <string name="permission">"authorizing reading and writing files"</string>
    <string name="list_empty">"playing list is empty!"</string>
</resources>
