<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2012 Amlogic, Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UseCompatTextViewDrawableXml,ContentDescription">

    <FrameLayout
        android:id="@+id/root"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SurfaceView
            android:id="@+id/surfaceview_show_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <ProgressBar
            android:id="@+id/loading_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/rotate_loading_360"
            android:indeterminateDuration="1800" />

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_layout"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/shape_menu_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tv_rotate_left"
            style="@style/menu_item"
            android:background="@drawable/selector_menu_item"
            android:drawableTop="@drawable/selector_rotation_left"
            android:text="@string/left_rotation"
            android:textColor="#FFFFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_rotate_right"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_rotate_right"
            style="@style/menu_item"
            android:background="@drawable/selector_menu_item"
            android:drawableTop="@drawable/selector_rotation_right"
            android:text="@string/right_rotation"
            app:layout_constraintBottom_toBottomOf="@id/tv_rotate_left"
            app:layout_constraintLeft_toRightOf="@id/tv_rotate_left"
            app:layout_constraintRight_toLeftOf="@id/tv_scale_up"
            app:layout_constraintTop_toTopOf="@id/tv_rotate_left" />

        <TextView
            android:id="@+id/tv_scale_up"
            style="@style/menu_item"
            android:background="@drawable/selector_menu_item"
            android:drawableTop="@drawable/selector_scale_up"
            android:text="@string/scale_up"
            app:layout_constraintBottom_toBottomOf="@id/tv_rotate_left"
            app:layout_constraintLeft_toRightOf="@id/tv_rotate_right"
            app:layout_constraintRight_toLeftOf="@id/tv_scale_down"
            app:layout_constraintTop_toTopOf="@id/tv_rotate_left" />

        <TextView
            android:id="@+id/tv_scale_down"
            style="@style/menu_item"
            android:background="@drawable/selector_menu_item"
            android:drawableTop="@drawable/selector_scale_down"
            android:text="@string/scale_down"
            app:layout_constraintBottom_toBottomOf="@id/tv_rotate_left"
            app:layout_constraintLeft_toRightOf="@id/tv_scale_up"
            app:layout_constraintRight_toLeftOf="@id/tv_timer_set"
            app:layout_constraintTop_toTopOf="@id/tv_rotate_left" />

        <TextView
            android:id="@+id/tv_timer_set"
            style="@style/menu_item"
            android:background="@drawable/selector_menu_item"
            android:drawableTop="@drawable/selector_timer_set"
            android:text="@string/timer_set"
            app:layout_constraintBottom_toBottomOf="@id/tv_rotate_left"
            app:layout_constraintLeft_toRightOf="@id/tv_scale_down"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_rotate_left" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/manual_skip"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            app:layout_constraintRight_toRightOf="@id/tv_timer_set"
            app:layout_constraintTop_toTopOf="@id/tv_timer_set" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/left_array"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/left"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/right_array"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/right"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/top_array"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/top"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/bottom_array"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/bottom"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/mNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:padding="10dp"
        android:text="下一张"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/vi_scale_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:background="@drawable/shape_menu_parent"
        android:clickable="false"
        android:focusable="false"
        android:padding="10dp"
        android:text="@string/scale_model_notice"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
